--- a/note/build.gradle
+++ b/note/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation project(':core')
 
     kapt library.androidx.roomCompiler
+    kapt library.google.daggerCompiler
 
     testImplementation library.test.junit
 
