Define Dashboard screen contracts

--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,8 @@ buildscript {
             'archCoreTesting' : '2.1.0-rc01',
             'lifecycle' : '2.2.0-alpha02',
             'runner' : '1.2.0',
+            'mockk' : '1.9.3',
+            'robolectric' : '4.3',
     ]
 
     ext.library = [
@@ -38,6 +40,9 @@ buildscript {
                     'roomTesting' : "androidx.room:room-testing:${versions.room}",
                     'archCoreTesting' : "androidx.arch.core:core-testing:${versions.archCoreTesting}",
                     'runner' : "androidx.test:runner:${versions.runner}",
+                    'mockk' : "io.mockk:mockk:${versions.mockk}",
+                    'mockkAndroid' : "io.mockk:mockk-android:${versions.mockk}",
+                    'robolectric' : "org.robolectric:robolectric:${versions.robolectric}",
             ]
     ]
 
