Design the UI for Dashboard screen

--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ buildscript {
             'runner' : '1.2.0',
             'mockk' : '1.9.3',
             'robolectric' : '4.3',
+            'recyclerView' : '1.0.0'
     ]
 
     ext.library = [
@@ -33,6 +34,7 @@ buildscript {
                     'roomCompiler' : "androidx.room:room-compiler:${versions.room}",
                     'lifecycleExtensions' : "androidx.lifecycle:lifecycle-extensions:${versions.lifecycle}",
                     'lifecycleViewModel' : "androidx.lifecycle:lifecycle-viewmodel-ktx:${versions.lifecycle}",
+                    'recyclerView' : "androidx.recyclerview:recyclerview:${versions.recyclerView}"
             ],
             test : [
                     'junit' : "junit:junit:${versions.junit}",
