Design the UI for details screen

--- a/note/src/main/AndroidManifest.xml
+++ b/note/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".detail.DetailActivity"
-            android:parentActivityName=".dashboard.DashboardActivity" />
+            android:parentActivityName=".dashboard.DashboardActivity"
+            android:theme="@style/DetailTheme"/>
         <activity
             android:name=".dashboard.DashboardActivity"
             android:windowSoftInputMode="adjustNothing">
